@@ -1194,7 +1194,7 @@ sub post_invoice {
                             $dbh, "parts", "onhand",
                             qq|id = | . qq|$form->{"id_$i"}|,
                             $form->{"qty_$i"} * -1
-                        ) unless $form->{shipped};
+                        ); # unless $form->{shipped};
                     }
 
                     &process_assembly( $dbh, $form, $form->{"id_$i"},
@@ -1205,7 +1205,7 @@ sub post_invoice {
                         $dbh, "parts", "onhand",
                         qq|id = $form->{"id_$i"}|,
                         $form->{"qty_$i"} * -1
-                    ) unless $form->{shipped};
+                    ); # unless $form->{shipped};
 
                 }
             }
